# DnmGL-Lite

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  vcpkg.json
Examples/: CMakeLists.txt
Examples/Sprite/: CMakeLists.txt  main.cpp
Header/DnmGL2D/: DnmGL2D.hpp  Sprite.hpp
Header/DnmGL2D/Loaders/: Windows.hpp
Header/DnmGL2D/Utility/: Container.hpp
Header/DnmGL2D/Vulkan/: CommandBuffer.hpp  Context.hpp  Pipeline.hpp  ResourceManager.hpp  Sampler.hpp
Header/DnmGLLite/: DnmGLLite.hpp  Sprite.hpp
Header/DnmGLLite/Loaders/: Windows.hpp
Header/DnmGLLite/Utility/: Counter.hpp  Flag.hpp  Macros.hpp  Math.hpp
Header/DnmGLLite/Vulkan/: Buffer.hpp  Context.hpp  Image.hpp  Pipeline.hpp  ResourceManager.hpp  Shader.hpp
Shaders/: DnmGL2D.glsl  Sprite.frag  Sprite.vert  TexturedTriangle.frag  TexturedTriangle.vert  Triangle.frag  Triangle.vert  compile.bat
Src/Vulkan/: Buffer.cpp  CommandBuffer.cpp  Context.cpp  Image.cpp  Pipeline.cpp  ResourceManager.cpp  Sampler.cpp  Shader.cpp
